@@ -3,6 +3,8 @@
         - removed non-posix call to length(array) in AWK script for generating
 	  the C MPI wrapper functions
 	- fixed potential buffer overflow when reading the filter file
+	- fixed build error when the CUDA runtime API wrapper are enabled and
+	  CUPTI is disabled
 	- enabled access to CUPTI counters for CUDA tracing via CUPTI
 	- enabled GPU memory usage tracing independent of the CUDA API
 	- enabled recording of CUDA synchronization and implicit synchronization in 
